<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_violet"
    tools:context=".CreateOrderActivity">

    <TextView
        android:id="@+id/textView_order_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/head_order"
        android:textColor="@color/color_white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_order_welcome">

        <RadioButton
            android:id="@+id/radio_button_tea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="OnClickCreateOrder"
            android:text="@string/option_tea"
            android:textColor="@color/color_white"
            android:textColorHighlight="@color/color_white"
            android:textSize="16sp">

        </RadioButton>

        <RadioButton
            android:id="@+id/radio_button_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnClickCreateOrder"
            android:text="@string/option_coffee"
            android:textColor="@color/color_white"
            android:textSize="16sp">

        </RadioButton>

    </RadioGroup>

    <TextView
        android:id="@+id/textView_order_drink_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_drink_type"
        android:textColor="@color/color_white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group">

    </TextView>

    <LinearLayout
        android:id="@+id/layout_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_order_drink_type">

        <Spinner
            android:id="@+id/spinner_drink_types_tea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/spinner_array_tea"
            android:popupBackground="@color/color_violet"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/spinner_drink_types_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_array_coffee"
            android:popupBackground="@color/color_violet"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_order_adding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_adding_order"
        android:textColor="@color/color_white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_spinner">

    </TextView>

    <CheckBox
        android:id="@+id/checkbox_milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/checkbox_milk"
        android:textColor="@color/color_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/checkbox_sugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_order_adding" />

    <CheckBox
        android:id="@+id/checkbox_sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/checkbox_sugar"
        android:textColor="@color/color_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/checkbox_lemon"
        app:layout_constraintStart_toEndOf="@id/checkbox_milk"
        app:layout_constraintTop_toBottomOf="@id/textView_order_adding" />

    <CheckBox
        android:id="@+id/checkbox_lemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/checkbox_lemon"
        android:textColor="@color/color_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkbox_sugar"
        app:layout_constraintTop_toBottomOf="@id/textView_order_adding" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@color/color_violet"
        android:onClick="OnClickSendOrder"
        android:text="@string/button_order"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_sugar">

        <TextView
            android:id="@+id/textView_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_text_amount"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextNumber_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:importantForAutofill="yes"
            android:inputType="number"
            android:autofillHints="1"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>